--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="footer">
+<footer id="footer" class="footer">
   <!-- Kontaktinformation -->
   <div class="footer-column">
     <h3>Kontaktinformation</h3>
@@ -37,11 +37,7 @@
 
   <!-- Logo -->
   <div class="footer-column logo-container">
-    <img
-      src="/billeder/logo.png"
-      alt="Another Closet logo"
-      class="footer-logo"
-    />
+    <img src="/billeder/logo.png" alt="Another Closet logo" class="footer-logo" />
   </div>
 </footer>
 <style>
