--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import "../ccs/global.css";
   <body>
     <Layout>
       <Hero />
+      <Guide />
       <Video />
       <Kort />
       <Faq />
