--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
       <span>FIND OS PÅ SOCIALE MEDIER</span>
     </div>
     <div class="right">
-      <span>KONTAKT OS</span>
+      <a href="#footer" class="contact-link">KONTAKT OS</a>
     </div>
   </div>
 
@@ -117,11 +117,17 @@
   .nav-item:hover::after {
     transform: scaleX(1);
   }
-  /* Mobile‐first: match the 1.25rem text size */
+
   .logo-wrapper img.logo-img {
     display: block;
     height: 2rem;
     width: auto;
+  }
+
+  .contact-link {
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
   }
 
   /* Desktop “scale up” */
