--- a/src/pages/medlem.astro
+++ b/src/pages/medlem.astro
@@ -1,1 +1,20 @@
+---
+import Events from "../components/Events.astro";
+import Faq from "../components/Faq.astro";
+import Footer from "../components/Footer.astro";
+import Guide from "../components/Guide.astro";
+import Hero from "../components/Hero.astro";
+import Kort from "../components/Kort.astro";
+import Plakat from "../components/Plakat.astro";
+import Video from "../components/Video.astro";
+import Layout from "../layouts/Layout.astro";
+import "../ccs/global.css";
+---
 
+<html>
+  <body>
+    <Layout>
+      <Faq />
+    </Layout>
+  </body>
+</html>
