--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,7 @@
       <span class="icon">
         <!-- Instagram -->
         <svg width="16" height="16" viewBox="0 0 24 24" fill="white">
-          <path
-            d="M7.5 2C4.462 2 2 4.462 2 7.5v9C2 19.538 4.462 22 7.5 22h9c3.038 0 5.5-2.462 5.5-5.5v-9C22 4.462 19.538 2 16.5 2h-9zM12 8.1a3.9 3.9 0 1 1 0 7.8 3.9 3.9 0 0 1 0-7.8zm6-1.6a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"
-          ></path>
+          <path d="M7.5 2C4.462 2 2 4.462 2 7.5v9C2 19.538 4.462 22 7.5 22h9c3.038 0 5.5-2.462 5.5-5.5v-9C22 4.462 19.538 2 16.5 2h-9zM12 8.1a3.9 3.9 0 1 1 0 7.8 3.9 3.9 0 0 1 0-7.8zm6-1.6a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"></path>
         </svg>
       </span>
       <span class="icon">
@@ -50,16 +48,13 @@
           </ul>
         </div>
       </div>
-      <div class="logo-wrapper">
-        <img
-          src="/billeder/headerlogo.webp"
-          alt="Another logo"
-          class="logo-img"
-        />
-      </div>
-
+      <a href="/" class="logo-link">
+        <div class="logo-wrapper">
+          <img src="/billeder/headerlogo.webp" alt="Another logo" class="logo-img" />
+        </div>
+      </a>
       <div class="side right">
-        <span class="nav-item">BLIV MEDLEM</span>
+        <a href="/medlem" class="nav-item">BLIV MEDLEM</a>
       </div>
     </nav>
   </div>
@@ -82,6 +77,10 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
     min-width: 120px;
+  }
+  a {
+    text-decoration: none;
+    cursor: pointer;
   }
 
   .dropdown-menu li a {
@@ -156,11 +155,18 @@
   .side.right {
     justify-content: flex-end;
   }
+
   .logo-wrapper {
+    position: static;
+  }
+
+  .logo-link {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    display: block;
   }
+
   .nav-item {
     position: relative;
     cursor: pointer;
