--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -1,1 +1,8 @@
+---
+import Layout from "../layouts/Layout.astro";
+import Eventside from "../components/eventside.astro";
+---
 
+<Layout>
+  <Eventside />
+</Layout>
