tilføjer events til index body

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,9 @@ import "../ccs/global.css";
       <Hero />
       <Guide />
       <Video />
-      <Plakat/>
+      <Plakat />
       <Kort />
+      <Events />
       <Faq />
     </Layout>
   </body>
