--- a/src/components/Eventside.astro
+++ b/src/components/Eventside.astro
@@ -33,8 +33,8 @@
       <div>
         <h3>19.00 - 19.30:</h3>
         <p>
-          Anna fra <a href="#">Colour Queen</a> kommer forbi kl. 19.00 - 19.30 og
-          fortæller om farveanalyse
+          Anna fra Colour Queen kommer forbi kl. 19.00 - 19.30 og fortæller om
+          farveanalyse
         </p>
       </div>
       <div>
@@ -77,10 +77,12 @@
       color: #333;
     }
     h1 {
-      font-size: 3rem;
+      font-size: 2.4rem;
       font-weight: bold;
       margin-bottom: -1rem;
+      margin-top: 0;
     }
+
     .highlight {
       color: #ec5a34;
     }
@@ -93,42 +95,59 @@
       font-size: 1.2rem;
     }
     .event-lokation h2 {
-      margin-bottom: -15px;
+      margin-bottom: -20px;
+      font-size: 30px;
     }
     .event-lokation p {
-      padding-bottom: 30px;
+      margin-bottom: 1rem;
     }
     .event-tidspunkt {
       display: flex;
       flex-direction: row;
       gap: 1rem;
     }
+    .event-tidspunkt h3 {
+      margin-bottom: -10px;
+      color: #ec5a34;
+    }
     .tilmelding {
       margin-top: 2rem;
       text-align: center;
     }
 
-    .form {
+    form {
       display: flex;
       flex-direction: column;
-      gap: 0.75rem;
+      align-items: center; /* centrerer indholdet horisontalt */
+      gap: 1rem;
       margin-top: 1rem;
     }
+
     input {
-      padding: 0.75rem;
+      width: 90%; /* gør felterne brede – justér efter behov */
+      max-width: 900px; /* sæt en max-bredde, så det ikke bliver for bredt på store skærme */
+      padding: 1rem;
       border: none;
       border-radius: 10px;
       font-size: 1rem;
     }
+
     button {
+      max-width: 150px;
+      width: 90%;
       background-color: #ec5a34;
       color: white;
-      padding: 0.75rem;
+      padding: 1rem;
       border: none;
       border-radius: 10px;
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-weight: bold;
       cursor: pointer;
+    }
+
+    button:hover {
+      transform: translateY(-2px) scale(1.05);
+      box-shadow: #333;
     }
 
     /* Desktop layout */
@@ -140,8 +159,7 @@
 
       .plakat {
         display: block;
-        max-width: 400px;
-        padding-left: 100px;
+        width: 50%; /* Tilføj dette */
       }
 
       .plakat img {
@@ -150,10 +168,9 @@
         object-fit: cover;
       }
 
-      .event-content {
-        width: 50%;
+      .event {
+        width: 50%; /* Tilføj dette */
         padding: 4rem;
-        overflow-y: auto;
       }
     }
   </style>
