events skelet justeringer

--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -1,6 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Eventside from "../components/eventside.astro";
+const url = "https://bwzlyynicfdhqxvfotfg.supabase.co";
+const key =
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ3emx5eW5pY2ZkaHF4dmZvdGZnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgzMjk5NjUsImV4cCI6MjA2MzkwNTk2NX0.iWIvQ6JD4u7LRTB0dUL8CuJFoys5U8sWInPGsV-kdjM";
 ---
 
 <Layout>
