--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -5,7 +5,9 @@
 <div class="event-wrapper">
   <!-- indsæt billeder fra api -->
   <div class="image-column">
-    <div class="image-placeholder"></div>
+    <div class="image-placeholder">
+      <img src="billeder/image4.webp" alt="" />
+    </div>
     <div class="image-placeholder"></div>
     <div class="image-placeholder"></div>
     <div class="image-placeholder"></div>
@@ -80,9 +82,8 @@
 
 <style>
   .event-wrapper {
-    padding: 2rem;
+    padding: 4rem;
     font-family: serif;
-    max-width: 1000px;
     margin: auto;
     display: flex;
     gap: 2rem;
@@ -91,7 +92,7 @@
   .image-column,
   .event-column {
     display: grid;
-    grid-template-rows: repeat(4, auto); /* 4 rækker */
+    grid-template-rows: repeat(4, auto);
     gap: 1rem;
   }
 
@@ -134,6 +135,7 @@
 
   .event:last-child .event-date {
     border-bottom: 1px solid black;
+    padding-bottom: 1.2rem;
   }
 
   .event-details {
@@ -150,6 +152,7 @@
 
   .event:last-child .event-details {
     border-bottom: 1px solid black;
+    padding-bottom: 3.5rem;
   }
 
   .event-location {
@@ -165,8 +168,8 @@
     border: none;
     border-radius: 0.4rem;
     font-weight: bold;
+    font-size: 1.2rem;
     cursor: pointer;
-
     position: absolute;
     right: 0;
     top: 50%;
