--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-
+<section>
 <div class="event-wrapper">
   <!-- indsæt billeder fra api -->
   <div class="image-column">
@@ -77,13 +77,18 @@
     </div>
   </div>
 </div>
+</section>
 
 <style>
+  section{
+    background-color: #fefde9;
+    z-index: 2;
+  }
   .event-wrapper {
     padding: 2rem;
     font-family: serif;
     max-width: 1000px;
-    margin: auto;
+    margin: 0 auto;
     display: flex;
     gap: 2rem;
   }
