--- a/src/components/Plakat.astro
+++ b/src/components/Plakat.astro
@@ -1,3 +1,4 @@
+<section>
 <img class="line" src="/public/billeder/plakater/line.png" alt="" />
 <div class="posters">
   <img src="/billeder/plakater/plakat1.webp" alt="plakat1" />
@@ -5,10 +6,13 @@
   <img class="hide" src="/public/billeder/plakater/plakat3.webp" alt="plakat3" />
   <img class="hide" src="/public/billeder/plakater/plakat4.webp" alt="plakat4" />
 </div>
+</section>
 
 <style>
-  body {
+  section {
     background-color: #fefde9;
+    z-index: 2;
+    height: 400px;
   }
 
   .line {
