--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Kort from "../components/Kort.astro";
 import Plakat from "../components/Plakat.astro";
 import Video from "../components/Video.astro";
 import Layout from "../layouts/Layout.astro";
+import Vindue from "../components/Vindue.astro";
 import "../ccs/global.css";
 ---
 
@@ -16,6 +17,7 @@ import "../ccs/global.css";
     <Layout>
       <Hero />
       <Guide />
+      <Vindue />
       <Video />
       <Plakat />
       <Kort />
