--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -7,9 +7,11 @@
 </video>
 <style>
   .forside-video {
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: -3;
+
   }
 </style>
