--- a/src/ccs/global.css
+++ b/src/ccs/global.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.cdnfonts.com/css/oregon-ldo");
 @font-face {
   font-family: "optima";
   src: url("/public/fonts/optima") format("woff2");
+
   font-weight: normal;
   font-style: normal;
 }
@@ -8,5 +10,5 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
 }
 h2 {
-  font-family: "optima", sans-serif;
+  font-family: "Oregon LDO", sans-serif;
 }
