--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,11 +1,18 @@
 ---
 
 ---
-
+<div></div>
 <video autoplay muted loop playsinline class="forside-video">
   <source src="/public/videoer/Herocomputer.mp4" type="video/mp4" />
 </video>
+<div></div>
+
 <style>
+
+  div{
+    height: 50 px;
+    background-color: #fefde9;
+  }
   .forside-video {
     position: fixed;
     top: 0;
