tilføjer Ecard fil og Events clean slate

--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -1,88 +1,97 @@
 ---
+// const url = "https://bwzlyynicfdhqxvfotfg.supabase.co/rest/v1/begivenheder";
+// const key =
+//   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ3emx5eW5pY2ZkaHF4dmZvdGZnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgzMjk5NjUsImV4cCI6MjA2MzkwNTk2NX0.iWIvQ6JD4u7LRTB0dUL8CuJFoys5U8sWInPGsV-kdjM";
+// const options = {
+//   headers: {
+//     apikey: key,
+//   },
+// };
 
+// const data = await fetch(url, options).then((response) => response.json());
+// console.log(data);
 ---
+
 <section>
-<div class="event-wrapper">
-  <!-- indsæt billeder fra api -->
-  <div class="image-column">
-    <div class="image-placeholder">
-      <img src="billeder/image4.webp" alt="" />
+  <div class="event-wrapper">
+    <!-- indsæt billeder fra api -->
+    <div class="image-column">
+      <img src="billeder/image_4.webp" alt="" />
+      <div class="image-placeholder"></div>
+      <div class="image-placeholder"></div>
+      <div class="image-placeholder"></div>
     </div>
-    <div class="image-placeholder"></div>
-    <div class="image-placeholder"></div>
-    <div class="image-placeholder"></div>
+
+    <div class="event-column">
+      <div class="event">
+        <div class="event-date">
+          <div class="event-date-inner">
+            <h3>[Dato]</h3><br />
+            <p>[Tid]</p>
+          </div>
+        </div>
+        <div class="event-details">
+          <div class="details-text">
+            <div class="event-location">[By]</div>
+            <div class="details">[Beskrivelse]</div>
+          </div>
+          <button class="signup-button">Tilmeld dig</button>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-date">
+          <div class="event-date-inner">
+            <h3>[Dato]</h3><br />
+            <p>[Tid]</p>
+          </div>
+        </div>
+        <div class="event-details">
+          <div class="details-text">
+            <div class="event-location">[By]</div>
+            <div class="details">[Beskrivelse]</div>
+          </div>
+          <button class="signup-button">Tilmeld dig</button>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-date">
+          <div class="event-date-inner">
+            <h3>[Dato]</h3><br />
+            <p>[Tid]</p>
+          </div>
+        </div>
+        <div class="event-details">
+          <div class="details-text">
+            <div class="event-location">[By]</div>
+            <div class="details">[Beskrivelse]</div>
+          </div>
+          <button class="signup-button">Tilmeld dig</button>
+        </div>
+      </div>
+
+      <div class="event">
+        <div class="event-date">
+          <div class="event-date-inner">
+            <h3>[Dato]</h3><br />
+            <p>[Tid]</p>
+          </div>
+        </div>
+        <div class="event-details">
+          <div class="details-text">
+            <div class="event-location">[By]</div>
+            <div class="details">[Beskrivelse]</div>
+          </div>
+          <button class="signup-button">Tilmeld dig</button>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="event-column">
-    <div class="event">
-      <div class="event-date">
-        <div class="event-date-inner">
-          <h3>[Dato]</h3><br />
-          <p>[Tid]</p>
-        </div>
-      </div>
-      <div class="event-details">
-        <div class="details-text">
-          <div class="event-location">[By]</div>
-          <div class="details">[Beskrivelse]</div>
-        </div>
-        <button class="signup-button">Tilmeld dig</button>
-      </div>
-    </div>
-
-    <div class="event">
-      <div class="event-date">
-        <div class="event-date-inner">
-          <h3>[Dato]</h3><br />
-          <p>[Tid]</p>
-        </div>
-      </div>
-      <div class="event-details">
-        <div class="details-text">
-          <div class="event-location">[By]</div>
-          <div class="details">[Beskrivelse]</div>
-        </div>
-        <button class="signup-button">Tilmeld dig</button>
-      </div>
-    </div>
-
-    <div class="event">
-      <div class="event-date">
-        <div class="event-date-inner">
-          <h3>[Dato]</h3><br />
-          <p>[Tid]</p>
-        </div>
-      </div>
-      <div class="event-details">
-        <div class="details-text">
-          <div class="event-location">[By]</div>
-          <div class="details">[Beskrivelse]</div>
-        </div>
-        <button class="signup-button">Tilmeld dig</button>
-      </div>
-    </div>
-
-    <div class="event">
-      <div class="event-date">
-        <div class="event-date-inner">
-          <h3>[Dato]</h3><br />
-          <p>[Tid]</p>
-        </div>
-      </div>
-      <div class="event-details">
-        <div class="details-text">
-          <div class="event-location">[By]</div>
-          <div class="details">[Beskrivelse]</div>
-        </div>
-        <button class="signup-button">Tilmeld dig</button>
-      </div>
-    </div>
-  </div>
-</div>
 </section>
 
 <style>
-  section{
+  section {
     background-color: #fefde9;
     z-index: 2;
   }
