--- a/src/components/MembershipSection.astro
+++ b/src/components/MembershipSection.astro
@@ -46,7 +46,7 @@
           <li>Del af fællesskabet</li>
           <li>Deltag når det passer</li>
         </ul>
-        <a href="/tilmeld" class="pricing-card__button">Meld dig ind</a>
+        <button id="pricing-card__button">Meld dig ind</button>
       </div>
     </div>
   </div>
@@ -155,12 +155,14 @@
     margin-bottom: 0.5rem;
     font-size: 0.95rem;
   }
-  .pricing-card__button {
+  #pricing-card__button {
     background: #fff;
     color: #2f855a;
     text-align: center;
     padding: 0.75rem 4rem;
+    border: none;
     border-radius: 0.5rem;
+    cursor:pointer;
     text-decoration: none;
     font-weight: 600;
     align-self: center;
