--- a/src/components/Vindue.astro
+++ b/src/components/Vindue.astro
@@ -1,3 +1,5 @@
+
+<!-- Dette Vindue komponent tillader at vi ser vores vidoeo som ligger bag vores andre komponenter, som en slags vindue -->
 <section>
 </section>
 
