--- a/src/pages/medlem.astro
+++ b/src/pages/medlem.astro
@@ -14,18 +14,12 @@ import AmbasPopup from "../components/Ambas_popup.astro";
       <MembershipSection />
       <AmbassadorSection />
       <Faq />
-
-        <button id="open-popup">Åbn Ambassadør popup</button>
-        <button id="open-medlem-popup">Åbn Medlem popup</button>
-
         <MedlemPopup/>
         <AmbasPopup/>
-
-        
 <script type="module" client:load>
     // — AMBASSADØR POPUP —
     const ambasPopup = document.getElementById("ambas-popup");           
-    const openAmbas  = document.getElementById('open-popup');
+    const openAmbas  = document.getElementById('amb-pricing-card__button');
     const closeAmbas = ambasPopup.querySelector('.close');
 
     openAmbas.addEventListener('click',  () => ambasPopup.classList.add('active'));
@@ -41,7 +35,7 @@ import AmbasPopup from "../components/Ambas_popup.astro";
 
     // — MEDLEM POPUP —
     const medlemPopup = document.getElementById('medlem-popup');
-    const openMedlem  = document.getElementById('open-medlem-popup');
+    const openMedlem  = document.getElementById('pricing-card__button');
     const closeMedlem = medlemPopup.querySelector('.close');
 
     openMedlem.addEventListener('click',  () => medlemPopup.classList.add('active'));
