links i header og footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,8 +17,8 @@
   <div class="footer-column">
     <h3>Hurtige links</h3>
     <ul>
-      <li><a href="/src/pages/medlem.astro">Sådan fungerer det</a></li>
-      <li><a href="/src/pages/begivenheder.astro">Find en salon</a></li>
+      <li><a href="/medlem">Sådan fungerer det</a></li>
+      <li><a href="/begivenheder">Find en salon</a></li>
     </ul>
 
     <!-- Sociale medier direkte under -->
