--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -83,7 +83,7 @@
       </div>
 
       <div class="side right">
-        <a href="../pages/medlem.astro" class="nav-item">BLIV MEDLEM</a>
+        <a href="/medlem" class="nav-item">BLIV MEDLEM</a>
 
       </div>
     </nav>
@@ -91,7 +91,6 @@
 </header>
 
 <style>
-  /* Mobile‐first base */
   header {
   }
   .dropdown-menu {
